--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <div id="tel-contact" class="ventana">
                 <i class="fa fa-phone"></i>
                 <a>Telefono: &nbsp; <br>+52 1 33 1553 9900<br></a>
-                <span>Whatsapp: <br><a href="https:/wa.me/+5213315539900" target="_blank"> +52 1 33 1553
+                <span>Whatsapp: <br><a href="https://wa.me/+5213315539900" target="_blank"> +52 1 33 1553
                         9900<br></a></span>
             </div>
 
@@ -221,5 +221,6 @@
     </footer>
     <script src="main.js"></script>
 </body>
+
 
 </html>
