--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
             <div class="ventana">
                 <i class="fa fa-globe"></i>
                 <a href="https://www.facebook.com/share/1BzFzFtFaQ/" class="fab fa-square-facebook"
-                    style="justify-self: center; font-size: 2rem;"></a>
+                    style="justify-self: center; font-size: 2rem; height:fit-content;"></a>
                 <a href="https://www.instagram.com/alojess1919?utm_source=qr&igsh=cjYxNXk5b3NnY3o4"
-                    class="fab fa-square-instagram" style="justify-self: center; font-size: 2rem"></a>
+                    class="fab fa-square-instagram" style="justify-self: center; font-size: 2rem; height:fit-content;"></a>
             </div>
 
             <div class="ventana">
@@ -224,3 +224,4 @@
 
 
 </html>
+
