--- a/index.html
+++ b/index.html
@@ -14,27 +14,26 @@
 
 <body>
     <div class="menu_panel">
-        <div class="title" style="user-select: none;"><span>JUSTICIA</span></div>
+        <div class="title user-select-none"><span>JUSTICIA</span></div>
         <div class="menu">
             <nav>
                 <ul>
-                    <li><a href="#inicio">Inicio</a></li> <!-- Home -->
-                    <li><a href="#sobrenosotros">Sobre Nosotros</a></li> <!-- About Us -->
-                    <li><a href="#tramites">Trámites</a></li> <!-- Legal Procedures -->
-                    <li><a href="#blog">Blog / Noticias</a></li> <!-- Blog or Legal News -->
-
-                    <li><a href="#Contactamos">Contactanos</a></li>
+                    <li><a class="user-select-none" href="#inicio">Inicio</a></li> <!-- Home -->
+                    <li><a class="user-select-none" href="#sobrenosotros">Sobre Nosotros</a></li> <!-- About Us -->
+                    <li><a class="user-select-none" href="#tramites">Trámites</a></li> <!-- Legal Procedures -->
+                    <li><a class="user-select-none" href="#blog">Blog</a></li> <!-- Blog or Legal News -->
+                    <li><a class="user-select-none" href="#Contactamos">Contactanos</a></li>
                 </ul>
             </nav>
-            <div class="header_info" style="user-select: none;"><span>Lic. Yesenia Alonso</span>
+            <div class="header_info user-select-none"><span>Lic. Yesenia Alonso</span>
                 <i style="user-select: none;"></i>
             </div>
         </div>
     </div>
     <div class="mobile-container">
         <div class="menu_mobile">
-            <button id="menuBtn"><i class="fas fa-bars"></i></button>
-            <div class="header_info"><span>Lic. Yesenia Alonso</span>
+            <button id="menuBtn"><i class="user-select-none fas fa-bars"></i></button>
+            <div class="header_info"><span class="user-select-none">Lic. Yesenia Alonso</span>
                 <i></i>
             </div>
             <div class="mobile_menu">
@@ -53,13 +52,13 @@
     </div>
     <div class="page">
         <div id="inicio" class="img-container">
-            <h1>Representación Legal Experta</h1>
-            <h2>Protegiendo Sus Derechos con Integridad y Profesionalismo</h2>
-            <button id="contactBtn">Contáctanos</button>
+            <h1 class="user-select-none">Representación Legal Experta</h1>
+            <h2 class="user-select-none">Protegiendo Sus Derechos con Integridad y Profesionalismo</h2>
+            <button class="user-select-none" id="contactBtn">Contáctanos</button>
         </div>
         <div class="content">
             <div id="sobrenosotros" class="container">
-                <h1 class="rect-cabezas">Sobre nosotros</h1>
+                <h1 class="rect-cabezas user-select-none">Sobre nosotros</h1>
                 <p>
                     En <strong>Justicia Legal</strong>, nos especializamos en brindar asesoría y representación legal de
                     alta
@@ -93,7 +92,7 @@
                 </p>
             </div>
             <div id="tramites" class="container">
-                <h1 class="rect-cabezas">Tramites</h1>
+                <h1 class="rect-cabezas user-select-none">Tramites</h1>
             </div>
             <div class="tramites-container">
                 <div class="card">
@@ -124,14 +123,14 @@
                     real que merece atención profesional.</p>
             </div>
             <div id="blog" class="container">
-                <h1 class="rect-cabezas">Blog</h1>
+                <h1 class="rect-cabezas user-select-none">Blog</h1>
             </div>
             <div class="blog-container">
                 <div class="radio-butones-container">
-                    <input type="radio" checked="true" name="group1" id="radio1" value="1">
-                    <input type="radio" name="group1" id="radio2" value="2">
-                    <input type="radio" name="group1" id="radio3" value="3">
-                    <input type="radio" name="group1" id="radio4" value="4">
+                    <input class="user-select-none" type="radio" checked="true" name="group1" id="radio1" value="1">
+                    <input class="user-select-none" type="radio" name="group1" id="radio2" value="2">
+                    <input class="user-select-none" type="radio" name="group1" id="radio3" value="3">
+                    <input class="user-select-none" type="radio" name="group1" id="radio4" value="4">
                 </div>
                 <div class="animation-cont"></div>
                 <div class="card-blog-container">
@@ -190,28 +189,28 @@
             </div>
 
             <div id="Contactamos" class="container">
-                <h1 class="rect-cabezas">Contactanos</h1>
+                <h1 class="rect-cabezas user-select-none">Contactanos</h1>
             </div>
         </div>
 
         <div class="contactamos-container">
             <div id="tel-contact" class="ventana">
-                <i class="fa fa-phone"></i>
+                <i class="fa fa-phone user-select-none"></i>
                 <a>Telefono: &nbsp; <br>+52 1 33 1553 9900<br></a>
                 <span>Whatsapp: <br><a href="https://wa.me/+5213315539900" target="_blank"> +52 1 33 1553
                         9900<br></a></span>
             </div>
 
             <div class="ventana">
-                <i class="fa fa-globe"></i>
-                <a href="https://www.facebook.com/share/1BzFzFtFaQ/" class="fab fa-square-facebook"
+                <i class="fa fa-globe user-select-none"></i>
+                <a href="https://www.facebook.com/share/1BzFzFtFaQ/" class="fab fa-square-facebook user-select-none"
                     style="justify-self: center; font-size: 2rem; height:fit-content;"></a>
                 <a href="https://www.instagram.com/alojess1919?utm_source=qr&igsh=cjYxNXk5b3NnY3o4"
-                    class="fab fa-square-instagram" style="justify-self: center; font-size: 2rem; height:fit-content;"></a>
+                    class="fab fa-square-instagram user-select-none" style="justify-self: center; font-size: 2rem; height:fit-content;"></a>
             </div>
 
             <div class="ventana">
-                <i class="fa fa-location-dot"></i>
+                <i class="fa fa-location-dot user-select-none"></i>
                 <a>Jocotepec, Jalisco, México</a>
             </div>
         </div>
@@ -221,7 +220,5 @@
     </footer>
     <script src="main.js"></script>
 </body>
-
-
+    
 </html>
-
