--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <li><a href="#inicio">Inicio</a></li>
                         <li><a href="#sobrenosotros">Sobre Nosotros</a></li>
                         <li><a href="#tramites">Trámites</a></li>
-                        <li><a href="#blog">Blog / Noticias</a></li>
+                        <li><a href="#blog">Blog</a></li>
                         <li><a href="#Contactamos">Contactanos</a></li>
                     </ul>
                 </nav>
@@ -222,3 +222,4 @@
 </body>
     
 </html>
+
